[package]
name          = "automaton"
version       = "0.0.1"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Parse regular languages"
documentation = "http://carllerche.github.io/automaton/automaton"
homepage      = "https://github.com/carllerche/automaton"
repository    = "https://github.com/carllerche/automaton"
readme        = "README.md"
keywords      = ["automaton", "regex", "parser"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[features]
bench = []

[dev-dependencies]
regex = "0.1.29"

[[test]]

name = "test"
path = "test/test.rs"

[[bench]]

name = "bench"
path = "bench/bench.rs"
